# hollowmark

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
game/: index.html
onchain/faucet/: server.mjs
onchain/hollowmark/: Cargo.toml
onchain/hollowmark/src/: lib.rs
onchain/scripts/: init-treasury.mjs  smoke.mjs
src/game/: main.ts  state.ts
src/game/chain/: program.ts  solana.ts
src/game/engine/: audio.ts  input.ts  loader.ts  sprites.ts
src/game/maps/: cave.ts
src/game/scenes/: dungeon.ts
src/landing/: main.ts
src/styles/: base.css  demo.css  game.css  landing.css  litepaper.css
