[package]
name = "hollowmark"
version = "0.1.0"
edition = "2021"
description = "Hollowmark — on-chain run vault + Grave treasury (devnet)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1"
borsh = "1.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
